remove defaulte value

--- a/.env.example
+++ b/.env.example
@@ -20,9 +20,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=transaction-email-sys-mariadb
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=transaction-email-sys-master-db
+DB_DATABASE=emailsript
 DB_USERNAME=root
 DB_PASSWORD=root
 
